# HNJobSearcher

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  main.py  mise.toml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python_test.yaml
hackerjobs/: HNSearch.py  JobPostingFetcher.py  JobPostingIndex.py  Posting.py  output.py
tests/: test_job_posting_index.py
