[project]
name = "HNJobSearcher"
version = "0.1.0"
description = "An application for looking at job postings from the Hacker News monthly job posting"
readme = "README.md"
requires-python = ">= 3.13"
authors = [
  {name = "Anthony Scotti"},
]
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "rich>=14.1.0",
    "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest>=8.4.2",
    "mypy>=1.18.2"
]

[tool.mypy]
strict = true
mypy_path = "."
